# ICP_Wallet

./: Cargo.toml  README.md  dfx.json  install.sh  package-lock.json
candid/: icp_token_wallet.did
src/: lib.rs
src/tests/: integration_tests.rs
